// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backtick.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`\` \`123\` \`\`

\`\`12\`34\`\`

\`\` \`12\`\`

\`\`34\` \`\`

\`\` \`\`\`123\`\`\` \`\`

\`\`\` 3 \`\`22\`\` \`1\` \`\`\`

\`\` 2 \`\`\`123\`\`\` \`1\` \`\`

=====================================output=====================================
\`\` \`123\` \`\`

\`\` 12\`34 \`\`

\`\` \`12\`\`

\`\` 34\`  \`\`

\` \`\`\`123\`\`\` \`

\`\`\` 3 \`\`22\`\` \`1\` \`\`\`

\`\` 2 \`\`\`123\`\`\` \`1\` \`\`

================================================================================
`;

exports[`cjk.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`const x = "中文123"\`

=====================================output=====================================
\`const x = "中文123"\`

================================================================================
`;

exports[`escape.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`1*2*3\`

=====================================output=====================================
\`1*2*3\`

================================================================================
`;

exports[`long.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`this is a long long long long long long long long long long long long long long long inline code\`

=====================================output=====================================
\`this is a long long long long long long long long long long long long long long long inline code\`

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`123\`

=====================================output=====================================
\`123\`

================================================================================
`;
